<resources>
    <string name="app_name">Randomizer</string>
    <string name="defaultText">text</string>
    <string name="coin">coin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eagle_and_tails">Подрабысвание монетки</string>
    <string name="dices">Игральные кости</string>
    <string name="random_digit_str">Cгенерировать случайное число</string>
    <string name="ball_8">шар восьмерка</string>
    <string name="list">Список</string>
    <string name="random">RANDOM</string>
    <string name="zero">0</string>
    <string name="take_cubes">Бросьте кубики!</string>
    <string name="One">1</string>
    <string name="two">2</string>
    <string name="throwC">Бросить</string>
    <string name="add_range_str">Введите диапозон чисел</string>
    <string name="until">До</string>
    <string name="from">От</string>
    <string name="eagle_or_tickle">Орел или Решка?</string>
    <string name="pic_eagle_and_tickle">pic eagle and tickle</string>
    <string name="background">background</string>
    <string name="decr_ball">Подумайте о чем нибудь и предскажите будущее</string>
    <string name="random_place">Введите значение для добавления в список</string>
    <string name="text_for_list">text_for_list</string>
    <string name="list_str">Список</string>
    <string name="add_data">ADD DATA</string>
    <string name="delete_item">delete item</string>
</resources>