<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.DicesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/dice_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/dice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="150sp"
                android:text="@string/One" />

            <TextView
                android:id="@+id/dice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="150sp"
                android:layout_margin="10dp"
                android:text="@string/One" />

        </LinearLayout>


        <TextView
            android:id="@+id/textInfoDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_cubes"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dice_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

       <LinearLayout
           android:id="@+id/buttonChoiceContainer"
           app:layout_constraintTop_toBottomOf="@id/dice_container"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:id="@+id/buttonChoiceDice1"
               android:layout_width="wrap_content"
               android:layout_margin="10dp"
               android:layout_height="wrap_content"
               android:text="@string/One" />

           <Button
               android:id="@+id/buttonChoiceDice2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/two"
               app:layout_constraintEnd_toEndOf="parent" />


       </LinearLayout>

        <Button
            android:id="@+id/throwButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/throwC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChoiceContainer" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>